WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
70444
Incorrect pagination in flipped-blocks writing modes with border/padding before
https://bugs.webkit.org/show_bug.cgi?id=70444
Summary
Incorrect pagination in flipped-blocks writing modes with border/padding before
mitz
Reported
2011-10-19 14:53:27 PDT
Incorrect pagination in flipped-blocks writing modes with border/padding before
Attachments
Account for flipped blocks when adjusting the page offset in LayoutState
(21.24 KB, patch)
2011-10-19 14:55 PDT
,
mitz
darin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
mitz
Comment 1
2011-10-19 14:55:08 PDT
Created
attachment 111680
[details]
Account for flipped blocks when adjusting the page offset in LayoutState
mitz
Comment 2
2011-10-19 15:41:44 PDT
Fixed in <
http://trac.webkit.org/r97888
>.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug