Incorrect pagination in flipped-blocks writing modes with border/padding before https://bugs.webkit.org/show_bug.cgi?id=70444

Reviewed by Darin Adler.

Source/WebCore:

Test: fast/multicol/flipped-blocks-border-after.html

* rendering/LayoutState.cpp:
(WebCore::LayoutState::LayoutState): Account for flipped blocks when adjusting the page offset.

LayoutTests:

* fast/multicol/flipped-blocks-border-after-expected.png: Added.
* fast/multicol/flipped-blocks-border-after-expected.txt: Added.
* fast/multicol/flipped-blocks-border-after.html: Added.



Canonical link: https://commits.webkit.org/86603@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@97888 268f45cc-cd09-0410-ab3c-d52691b4dbfc